--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "crate-name"
+name = "oxbow"
 version = "0.1.0"
-authors = ["full-name <email>"]
+authors = ["Søren Mortensen <soren@neros.dev>"]
 edition = "2018"
 publish = false
 license = "MIT OR Apache-2.0"
