Set up Bot and db connection pool

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,8 @@ async-trait = "0.1.50"
 chrono = "0.4.19"
 dotenv = "0.15.0"
 eyre = "0.6.5"
+r2d2 = "0.8.9"
+r2d2_sqlite = "0.18.0"
 rusqlite = "0.25.1"
 surf = "2.2.0"
 thiserror = "1.0.24"
