--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ r2d2 = "0.8.9"
 r2d2_sqlite = "0.18.0"
 rusqlite = "0.25.1"
 surf = "2.2.0"
+tap = "1.0.1"
 thiserror = "1.0.24"
 tracing = "0.1.25"
 tracing-subscriber = "0.2.17"
