--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ license = "MIT OR Apache-2.0"
 [dependencies]
 async-trait = "0.1.50"
 chrono = "0.4.19"
+clap = "3.0.0-beta.2"
 dotenv = "0.15.0"
 eyre = "0.6.5"
 r2d2 = "0.8.9"
