--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ tap = "1.0.1"
 thiserror = "1.0.24"
 tracing = "0.1.25"
 tracing-subscriber = "0.2.17"
+lazy_static = "1.4.0"
 
 [dependencies.refinery]
 git = "https://github.com/rust-db/refinery"
