--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ chrono = "0.4.19"
 clap = "3.0.0-beta.2"
 dotenv = "0.15.0"
 eyre = "0.6.5"
+lazy_static = "1.4.0"
+obws = "0.7.0"
 r2d2 = "0.8.9"
 r2d2_sqlite = "0.18.0"
 rusqlite = "0.25.1"
@@ -20,7 +22,6 @@ tap = "1.0.1"
 thiserror = "1.0.24"
 tracing = "0.1.25"
 tracing-subscriber = "0.2.17"
-lazy_static = "1.4.0"
 
 [dependencies.refinery]
 git = "https://github.com/rust-db/refinery"
