--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,10 @@ edition = "2018"
 publish = false
 license = "MIT OR Apache-2.0"
 
+[features]
+default = ["obws"]
+obs = ["obws"]
+
 [dependencies]
 async-trait = "0.1.50"
 chrono = "0.4.19"
@@ -13,7 +17,6 @@ clap = "3.0.0-beta.2"
 dotenv = "0.15.0"
 eyre = "0.6.5"
 lazy_static = "1.4.0"
-obws = "0.7.0"
 r2d2 = "0.8.9"
 r2d2_sqlite = "0.18.0"
 rusqlite = "0.25.1"
@@ -22,6 +25,8 @@ tap = "1.0.1"
 thiserror = "1.0.24"
 tracing = "0.1.25"
 tracing-subscriber = "0.2.17"
+
+obws = { version = "0.7.0", optional = true }
 
 [dependencies.refinery]
 git = "https://github.com/rust-db/refinery"
