--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ tracing = "0.1.25"
 tracing-subscriber = "0.2.17"
 
 obws = { version = "0.7.0", optional = true }
+config = "0.11.0"
 
 [dependencies.refinery]
 git = "https://github.com/rust-db/refinery"
