--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,13 +7,14 @@ publish = false
 license = "MIT OR Apache-2.0"
 
 [features]
-default = ["obws"]
+default = ["obs"]
 obs = ["obws"]
 
 [dependencies]
 async-trait = "0.1.50"
 chrono = "0.4.19"
 clap = "3.0.0-beta.2"
+config = "0.11.0"
 dotenv = "0.15.0"
 eyre = "0.6.5"
 lazy_static = "1.4.0"
@@ -27,12 +28,16 @@ tracing = "0.1.25"
 tracing-subscriber = "0.2.17"
 
 obws = { version = "0.7.0", optional = true }
-config = "0.11.0"
+figment = "0.10.5"
 
 [dependencies.refinery]
 git = "https://github.com/rust-db/refinery"
 branch = "main"
 features = ["rusqlite"]
+
+[dependencies.serde]
+version = "1.0.126"
+features = ["derive"]
 
 [dependencies.tokio]
 version = "1.5"
