--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,20 +12,27 @@ chrono = "0.4.19"
 clap = "3.0.0-beta.2"
 dotenv = "0.15.0"
 eyre = "0.6.5"
+indoc = "1.0.3"
+lalrpop-util = "0.19.6"
+lazy_static = "1.4.0"
 r2d2 = "0.8.9"
 r2d2_sqlite = "0.18.0"
-rusqlite = "0.25.1"
+rand = "0.8.4"
+regex = "1.5.4"
 surf = "2.2.0"
 tap = "1.0.1"
 thiserror = "1.0.24"
 tracing = "0.1.25"
 tracing-subscriber = "0.2.17"
-lazy_static = "1.4.0"
 
 [dependencies.refinery]
 git = "https://github.com/rust-db/refinery"
 branch = "main"
 features = ["rusqlite"]
+
+[dependencies.rusqlite]
+version = "0.25.1"
+features = ["chrono"]
 
 [dependencies.tokio]
 version = "1.5"
@@ -45,3 +52,6 @@ branch = "main"
 
 [dev-dependencies]
 tempfile = "3.2.0"
+
+[build-dependencies]
+lalrpop = "0.19.6"
