--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,6 @@ license = "MIT OR Apache-2.0"
 [dependencies]
 async-trait = "0.1.50"
 chrono = "0.4.19"
-clap = "3.0.0-beta.2"
 dotenv = "0.15.0"
 eyre = "0.6.5"
 indoc = "1.0.3"
@@ -24,6 +23,10 @@ tap = "1.0.1"
 thiserror = "1.0.24"
 tracing = "0.1.25"
 tracing-subscriber = "0.2.17"
+
+[dependencies.clap]
+version = "3.0.0-beta.2"
+features = ["derive", "env"]
 
 [dependencies.refinery]
 git = "https://github.com/rust-db/refinery"
@@ -48,7 +51,7 @@ features = ["refreshing-token"]
 
 [dependencies.twitch_oauth2_auth_flow]
 git = "https://github.com/stuck-overflow/twitch_oauth2_auth_flow"
-branch = "main"
+rev = "3380e1603f28f379bd0d9d0e91e27512f80c9b6b"
 
 [dev-dependencies]
 tempfile = "3.2.0"
